# moleculerpy-channels

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.claude/hooks/: pre-code-check.sh
.github/workflows/: ci.yml  publish.yml
benchmarks/: README.md  performance_test.py
docs/: ARCHITECTURE-COMPARISON.md  GAP-ANALYSIS.md  IMPLEMENTATION-PLAN.md  INDEX.md  QUICKSTART.md  TESTING-GUIDE.md
examples/: README.md  graceful_shutdown.py  redis_example.py  simple.py
moleculerpy_channels/: __init__.py  channel.py  constants.py  errors.py  metrics.py  middleware.py  tracing.py  utils.py
moleculerpy_channels/adapters/: __init__.py  base.py  fake.py  nats.py  nats.pyi  protocols.py  protocols.pyi  redis.py
scripts/: RUN-TESTS.sh
tests/: README.md  __init__.py  conftest.py  docker-compose.yml
tests/e2e/: conftest.py  test_consumer_groups.py  test_dlq.py  test_load_balancing.py
tests/integration/: __init__.py  test_nats_basic.py  test_redis_basic.py  test_redis_dlq_retry.py  test_redis_graceful_shutdown_enhanced.py  test_redis_phase_4_1.py  test_redis_phase_4_2_context.py  test_redis_phase_4_2_metrics.py
tests/unit/: __init__.py  test_base_adapter.py  test_constants.py  test_errors.py  test_fake_adapter.py  test_middleware.py  test_tracing.py  test_utils.py
