[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "moleculerpy-channels"
version = "0.2.0"
description = "Python port of Moleculer Channels middleware for reliable pub/sub messaging"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    {name = "Eli Rum", email = "explosivebit@gmail.com"}
]
maintainers = [
    {name = "MoleculerPy Team"}
]
keywords = ["moleculer", "channels", "pubsub", "messaging", "microservices"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "moleculerpy>=0.14.6",
]

[project.optional-dependencies]
redis = ["redis[hiredis]>=5.0.0"]
nats = ["nats-py>=2.7.0"]
all = ["redis[hiredis]>=5.0.0", "nats-py>=2.7.0"]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.8.0",
    "ruff>=0.3.0",
]

[project.urls]
Homepage = "https://moleculerpy.services"
Documentation = "https://moleculerpy.services/docs/channels"
Repository = "https://github.com/MoleculerPy/moleculerpy-channels"
Issues = "https://github.com/MoleculerPy/moleculerpy-channels/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["moleculerpy_channels*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=moleculerpy_channels",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests requiring external services",
    "e2e: End-to-end tests with full broker cluster",
    "slow: Slow tests (>1s)",
]

[tool.coverage.run]
source = ["moleculerpy_channels"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "C4",
    "UP",
]
ignore = [
    "E501",
    "B008",
]

[tool.ruff.lint.per-file-ignores]
"examples/**" = ["E402", "F541"]
"benchmarks/**" = ["F841"]
"moleculerpy_channels/adapters/__init__.py" = ["F401"]
"moleculerpy_channels/adapters/fake.py" = ["B007"]
"tests/**" = ["B007", "B904"]
"moleculerpy_channels/adapters/redis.py" = ["B904"]
